[ASL-4703] Fix squashed status-bar (#358)
`@include govuk-grid-column(one-third);` uses % based width in newer govuk design system, so needs to be at the top level of the header, not nested in a content div

--- a/packages/asl-components/src/status-bar/index.scss
+++ b/packages/asl-components/src/status-bar/index.scss
@@ -1,4 +1,4 @@
-.wrapper-header .content {
+.wrapper-header {
   @include govuk-grid-row;
 
   > nav {
@@ -27,3 +27,4 @@
     }
   }
 }
+
